Currency Converter API Consumed

--- a/scp_api_app/templates/partials/nav.html
+++ b/scp_api_app/templates/partials/nav.html
@@ -10,13 +10,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="">Stock Prices<span class="sr-only"></span></a>
+                <a class="nav-link" href="{% url 'convert' %}">Currency Converter<span class="sr-only"></span></a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="">Crypto Prices<span class="sr-only"></span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="">Currency Prices<span class="sr-only"></span></a>
+                <a class="nav-link" href="">Stocks Prices<span class="sr-only"></span></a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="">API 1<span class="sr-only"></span></a>
