--- a/scp_api_app/templates/partials/base.html
+++ b/scp_api_app/templates/partials/base.html
@@ -13,7 +13,48 @@
     
     <!--Custome CSS
     <link rel="stylesheet" href="{% static '/style.css' %}">-->
+    <style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+        padding: 0;
+        background-color: #f4f4f4;
+    }
+    h2 {
+        color: #333;
+    }
+    form {
+        margin-bottom: 20px;
+    }
+    input[type=text], input[type=number] {
+        width: 100%;
+        padding: 8px;
+        margin: 10px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+    input[type=submit] {
+        width: 100%;
+        background-color: #4CAF50;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+    input[type=submit]:hover {
+        background-color: #45a049;
+    }
 
+    p {
+            color: #555;
+            font-size: 16px;
+            line-height: 1.6;
+        }
+  </style>
   </head>
   <body>
 
