--- a/scp_api_app/templates/partials/footer.html
+++ b/scp_api_app/templates/partials/footer.html
@@ -1,11 +1,10 @@
-  <!--Navbar starts-->
-
-  <!-- <div class="footer bg-dark text-light py-2 mt-10 ">       -->
-    <!-- Copyright -->
-    <!-- <div class="text-center p-3">
-      © 2023 Copyright: Groceries Mart (GMart) Inventory Website. All rights reserved.
-      Developed by 
-      <a class="text-light" href="https://x22209573-staticwebpage.s3.eu-west-1.amazonaws.com/index.html">Priyal Patil</a> <!--Used S3 as Static website-->
-    <!-- </div> -->
-    <!-- Copyright -->
-<!-- </div> -->
+<div class="footer">
+  <!-- Copyright -->
+  <div class="text-center p-3 bg-dark text-light py-2 mt-10">
+    © 2024 Copyright: UniversalConverter. All rights reserved.
+    Developed by
+    <a class="text-light" href="https://www.linkedin.com/in/priyalpatil98/">Priyal Patil</a>
+   
+  </div>
+  <!-- Copyright -->
+</div>
