--- a/scp_api_app/templates/partials/nav.html
+++ b/scp_api_app/templates/partials/nav.html
@@ -15,25 +15,16 @@
             <li class="nav-item active">
                 <a class="nav-link" href="{% url 'crypto' %}">Crypto Rates<span class="sr-only"></span></a>
             </li>
-            <li class="nav-item active">
+            <!-- <li class="nav-item active">
                 <a class="nav-link" href="{% url 'index' %}">Stocks Rates<span class="sr-only"></span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="">API 1<span class="sr-only"></span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="">API 2<span class="sr-only"></span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="">API 3<span class="sr-only"></span></a>
-            </li>
+            </li> -->
           </ul>
           <ul class="navbar-nav ms-auto">
             <li class="nav-item active">
             <a class="nav-link" href=""> <span class="sr-only"></span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="{% url 'index' %}">About Us</a>
+              <a class="nav-link text-white" href="https://github.com/priyalpatil98">About Us</a>
             </li>
           </ul>
           
